primeira parte da introdução

--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -1,11 +1,21 @@
 \chapter[Introdução]{Introdução}
 \label{ch:introdução}
-Escreva aqui seu capítulo introdutório. Ele pode conter figuras, tabelas e subseções. Exemplo de uma citação indireta \cite{yu2011new}, e da \autoref{fig:rede_convencional}. Imagens do autor, tem na fonte o texto "Elaborado pelo autor".
+A eletricidade se tornou um pilar central na atualidade, sendo uma das principais fontes de força, calor e luz utilizada no  mundo. Entrantando com o
+crescente consumo de energia elétrica nos últimos tempos, a demanda por produção da mesma teve um crecismento significativo, trazendo consigo 
+impactos ambientais e econômicos. O Brasil por mais que possua em seu território grandes possibilidade para a construção de hidrelétricas, não
+está isento do problema da alta demanda por energia elétrica. Problema que se agravou em 2015 quando o país começou a passar por
+uma crise hídrica.
+
+Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de Hidroelétricas, essa dependência
+energetica junto com a crise hídrica que o país sofreu cuminou em ....
+
+
+JONATHAN aqui seu capítulo introdutório. Ele pode conter figuras, tabelas e subseções. Exemplo de uma citação indireta \cite{yu2011new}, e da \autoref{fig:rede_convencional}. Imagens do autor, tem na fonte o texto "Elaborado pelo autor".
 
 \begin{figure}[h!]
-	\includegraphics[width=0.9\textwidth, keepaspectratio=true]{rede_convencional}
+	\includegraphics[width=0.9\textwidth, keepaspectratio=true]{forma_energia}
 	\centering
-	\caption[Esquemático de uma rede elétrica convencional.]{Esquemático de uma rede elétrica convencional.}
+	\caption[Capacidade de instalada de geração elétrica no Brasil (MW)]{Capacidade de instalada de geração elétrica no Brasil (MW)}
 	\fonte{\cite[p. 15]{cgee}.}
 	\label{fig:rede_convencional}
 \end{figure}
