introdução - sustentabilidade e  smart grid

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 % ---
 
 \titulo{{\normalfont \textbf{Título do seu Trabalho}}}
-\autor{Fulano de Tal}
+\autor{Jonathan da Silva Braga}
 \local{Natal -- RN}
 \data{Dezembro de 2017}
 \instituicao{
@@ -53,12 +53,12 @@
   \par
   Departamento de Engenharia de Computação e Automação -- DCA
   \par
-  Curso de Engenharia de Computação
+  Curso de Engenharia Mecatrônica
 
 }
 \tipotrabalho{Relatório técnico}
 
-\preambulo{Trabalho de Conclusão de Curso de Engenharia de Computação da Universidade Federal do Rio Grande do Norte, apresentado como requisito parcial para a obtenção do grau de Bacharel em Engenharia de Computação
+\preambulo{Trabalho de Conclusão de Curso de Engenharia Mecatrônica da Universidade Federal do Rio Grande do Norte, apresentado como requisito parcial para a obtenção do grau de Bacharel em Engenharia Mecatrônica
 \newline 
 \newline 
 Orientador: John Doe}
