--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -6,11 +6,16 @@ impactos ambientais e econômicos. O Brasil por mais que possua em seu territór
 está isento do problema da alta demanda por energia elétrica. Problema que se agravou em 2015 quando o país começou a passar por
 uma crise hídrica.
 
-Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de Hidroelétricas, essa dependência
-energetica junto com a crise hídrica que o país sofreu cuminou em ....
+Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétrica gerada no Brasil é por meio de hidroelétricas, essa dependência
+energetica junto com a crise hídrica que o país sofreu cuminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
+consumo de energia elétrica - que impactou diretamente a vida de cada cidadão brasileiro, trouxe consequências, como o aumento do 
+custo da energia elétrica. Segundos dados (G1, 2016) entre 2015 e 2016 a crise hídrica no Brasil não interferiu apenas na conta de luz mas trouxe
+um aumento na inflação do país.
+
+% sustentabilidade
 
 
-JONATHAN aqui seu capítulo introdutório. Ele pode conter figuras, tabelas e subseções. Exemplo de uma citação indireta \cite{yu2011new}, e da \autoref{fig:rede_convencional}. Imagens do autor, tem na fonte o texto "Elaborado pelo autor".
+% JONATHAN aqui seu capítulo introdutório. Ele pode conter figuras, tabelas e subseções. Exemplo de uma citação indireta \cite{yu2011new}, e da \autoref{fig:rede_convencional}. Imagens do autor, tem na fonte o texto "Elaborado pelo autor".
 
 \begin{figure}[h!]
 	\includegraphics[width=0.9\textwidth, keepaspectratio=true]{forma_energia}
@@ -18,6 +23,27 @@ JONATHAN aqui seu capítulo introdutório. Ele pode conter figuras, tabelas e su
 	\caption[Capacidade de instalada de geração elétrica no Brasil (MW)]{Capacidade de instalada de geração elétrica no Brasil (MW)}
 	\fonte{\cite[p. 15]{cgee}.}
 	\label{fig:rede_convencional}
+\end{figure}
+\FloatBarrier
+
+A necessidade de contornar os desafios da crescente demanda energetica insentiva a busca por fontes alternativas e limpas de energia. O Brasil 
+possui 42,30\% de fontes renováveis da sua matriz energetica e esse número deve aumentar até 2021 onde alcançará a marca de 85,00\% (as hidroelétricas
+estão inclusas nesse meio), segundo o Ministério de Minas e Energia. No Plano Decemal de Expansão de Energia (PDE) 2020, o gorveno brasileiro
+assume que a sustentabilidade é a chave mestra para a expenssão de atividades de geração de energia elétrica. A \autoref{fig:fonte_energia} mostra
+que o Brasil vem investindo ao passar dos anos em fontes limpas de energias. Contudo também mostra que o Brasil ainda é muito dependente das 
+hidrelétricas que apesar de ser uma fonte limpa e renovável traz malefícios como as grandes áreas alagadas em volta da represa, impactando no
+ciclo de vida das espécies e obriga populaões ribeirinhas a migrarem, isso mostra que não basta apenas ter fontes limpas
+e renováveis de energia, é necessário buscar melhorias como as Smart Grids e técnicas como de Smart metering.
+
+
+
+
+\begin{figure}[h!]
+	\includegraphics[width=0.7\textwidth, keepaspectratio=true]{fontes_energia}
+	\centering
+	\caption[Fontes de geração de energia elétrica (GWh)]{Fontes de geração de energia elétrica (GWh)}
+	\fonte{\cite[p. 15]{cgee}.}
+	\label{fig:fonte_energia}
 \end{figure}
 \FloatBarrier
 
