Introdução - termino do parágrafo de smart grid.

--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -35,9 +35,6 @@ hidrelétricas que apesar de ser uma fonte limpa e renovável traz malefícios c
 ciclo de vida das espécies e obriga populaões ribeirinhas a migrarem, isso mostra que não basta apenas ter fontes limpas
 e renováveis de energia, é necessário buscar melhorias como as Smart Grids e técnicas como de Smart metering.
 
-
-
-
 \begin{figure}[h!]
 	\includegraphics[width=0.7\textwidth, keepaspectratio=true]{fontes_energia}
 	\centering
@@ -47,7 +44,32 @@ e renováveis de energia, é necessário buscar melhorias como as Smart Grids e 
 \end{figure}
 \FloatBarrier
 
-Exemplo de citação direta com menos de três linhas. Como "o mercado de energia elétrica está baseado em tarifas fixas e limitações de informações em tempo real sobre gerenciamento da rede e da carga" \cite[p. 15]{cgee}, o consumidor acaba, então, não tendo como optar por fornecimentos elétricos mais adequados. 
+As chamadas redes inteligentes de transmissão e distribuição de energia, smart grid, tem como objetivo conectar unidades descentralizadas de geração
+grande e pequena com o consumidor final. Assim nessa ideia o fluxo de energia se comunica de uma maneira bidirecional, a energia que é tradicionalmente
+gerada e distribuidas pelas concessionárias poderá ser gerada e integrada as redes elétricas apartir de unidades consumidoras. O grande pilar dessa 
+tecnologia são os sensores instalados ao longo da rede elétrica que constantemente estão enviando informações referente ao consumo a concessionária,
+possibilitando um planejamento mais eficiente da rede. Aliado aos sensores na rede elétrica o consumidor recebe um medidor inteligente que também
+é integrado com a concessionária em tempo real.
+
+\begin{figure}[h!]
+	\includegraphics[width=0.7\textwidth, keepaspectratio=true]{rede_smartgrid}
+	\centering
+	\caption[Smart Grid,comunicação inteligente entre todos os usuários]{Smart Grid,comunicação inteligente entre todos os usuários}
+	\fonte{\cite[p. 15]{cgee}.}
+	\label{fig:rede_smartgrid}
+\end{figure}
+\FloatBarrier
+
+O trabalho apresentará uma forma barata e eficiente de monitorar a energia elétrica de uma residência em tempo real, possibilitanto ao usuário
+possuir informações valiosas a todo momento. O trabalho fará um paralelo com algumas das várias possibilidades de medição de consumo e monitoramento
+de energia, provando que através da prática de gerenciamento e monitoramento de energia é possível conscientizar o usuário do mau uso da energia elétrica.
+Então a partir desse dispositivo será possível entender como e onde a energia está sendo gasta, possibilitando mais informações ao usuário e ajudando para
+que ele tome as precauções certas para economizar.
+
+O trabalho será dividido da seguinte maneira: No \autoref{ch:cap2}
+
+
+% Exemplo de citação direta com menos de três linhas. Como "o mercado de energia elétrica está baseado em tarifas fixas e limitações de informações em tempo real sobre gerenciamento da rede e da carga" \cite[p. 15]{cgee}, o consumidor acaba, então, não tendo como optar por fornecimentos elétricos mais adequados. 
 
 
 \section{Uma subseção explicativa}
