adição de referências e incializaçção do cap 2

--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -29,3 +29,47 @@
     org-short={CGEE},
     organization={Centro de Gest{\~a}o e Estudos Estrat{\'e}gicos}
 }
+
+@techreport{atlas-anel,
+    title={{\'A}tlas de energia el{\'e}trica do Brasil},
+    year={2012},
+    address={Brasília},
+    pages={153},
+    org-short={Atlas},
+    organization={{AG{\^E}NCIA NACIONAL DE ENERGIA EL{\'E}TRICA}}
+}
+
+@techreport{epe-balanco,
+    title={Balanço Energ{\'e}tico no Brasil},
+    year={2017},
+    address={Rio de Janeiro},
+    pages={61},
+    org-short={EPE-BalanÇo},
+    organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
+}
+
+@techreport{epe-anuario,
+    title={Anu{\'a}rio Estat{\'i}stico de Energia El{\'e}trica 2017 ano base 2016},
+    year={2017},
+    address={Brasília},
+    pages={232},
+    org-short={EPE-Anu{\'a}rio},
+    organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
+}
+
+@techreport{epe-balanco-final,
+    title={Balanço Energ{\'e}tico no Brasil Relatório Final},
+    year={2017},
+    address={Rio de Janeiro},
+    pages={294},
+    org-short={EPE-BalanÇo-Final},
+    organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
+}
+
+@misc{smart-grid,
+  author = {CEMIG},
+  title = {O que s{\~a}o as redes inteligentes de energia},
+  url = {http://www.cemig.com.br/pt-br/A_Cemig_e_o_Futuro/sustentabilidade/nossos_programas/Redes_Inteligentes/Paginas/as_redes_inteligentes.aspx},
+  urldate = {2017-06-01},
+  org-short={Smart Grid}
+}
