--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@ Orientador: John Doe}
 	\vspace*{\fill}
 	\centering
 	\noindent
-	\textit{Escreva aqui sua dedicatória}
+	\textit{Escreva aqui sua dedicatórss}
 	 \vspace*{\fill}
 \end{dedicatoria}
 
@@ -157,9 +157,12 @@ Orientador: John Doe}
 
 % inserir lista de abreviaturas e siglas
 \begin{siglas}
-\item[HTML] \textit{HyperText Markup Language}
-\item[JSON] \textit{JavaScript Object Notation}
-\item[REST] \textit{Representational State Transfer}
+\item[HTML]   \textit{HyperText Markup Language}
+\item[JSON]   \textit{JavaScript Object Notation}
+\item[REST]   \textit{Representational State Transfer}
+\item[EPE]    \textit{Empresa de Pesquisa Energética}
+\item[ANEEL]  \textit{Agência Nacional de Energia Elétrica}
+\item[CEMIG]  \textit{Comapanhia Energética de Minas Gerais}
 \end{siglas}
 
 % inserir lista de símbolos
