--- a/textuais/capitulo2.tex
+++ b/textuais/capitulo2.tex
@@ -1,15 +1,17 @@
-\chapter[Capítulo 2]{Capítulo 2}
+\chapter[Embasamento Teórico]{Embasamento Teórico}
 \label{ch:cap2}
-
-Neste capítulo, são apresentados os conhecimentos necessários para (...).
-
-\section[\textit{Seção}]{\textit{Seção}}
-\lipsum[1-2]
+\section[\textit{Contextualizacao}]{\textit{Contextualização}}\label{context}
+O Consumo de energia elétrica é um dos principais indicadores de desenvolvimento e de qualidade de vida 
+de um país. Essw índice é tão importate que reflete diretamente no rítimo de vida de uma populção, pois mostra
+se as atividades industriais de uma nação está ou não em um bom rítimo e pode detectar se o comércio está alta,
+devido aos bens e serviços que o povo adiquiriu. Analisando os dados \cite{epe-balanco-final}, o consumo de energia
+elétrica no Brasil vem crescendo ao longo dos anos, o brasileiro vem consumindo mais energia elétrica, nos últimos
+35 anos teve um crescimento médio de 6.72\% dessa demanda 
 
 Itens em latex:
 \begin{itemize}
 	\item texto 1;
-	\item texto 2;
+	\item tewd;
 	\item texto 3;
 \end{itemize}
 
