--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -10,7 +10,7 @@ Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétric
 energetica junto com a crise hídrica que o país sofreu cuminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
 consumo de energia elétrica - que impactou diretamente a vida de cada cidadão brasileiro, trouxe consequências, como o aumento do 
 custo da energia elétrica. Segundos dados (G1, 2016) entre 2015 e 2016 a crise hídrica no Brasil não interferiu apenas na conta de luz mas trouxe
-um aumento na inflação do país.
+um aumento na inflação do país.asdasdasd
 
 % sustentabilidade
 
@@ -21,7 +21,7 @@ um aumento na inflação do país.
 	\includegraphics[width=0.9\textwidth, keepaspectratio=true]{forma_energia}
 	\centering
 	\caption[Capacidade de instalada de geração elétrica no Brasil (MW)]{Capacidade de instalada de geração elétrica no Brasil (MW)}
-	\fonte{\cite[p. 15]{cgee}.}
+	\fonte{\cite[p. 57]{epe-anuario}.}
 	\label{fig:rede_convencional}
 \end{figure}
 \FloatBarrier
@@ -39,7 +39,7 @@ e renováveis de energia, é necessário buscar melhorias como as Smart Grids e 
 	\includegraphics[width=0.7\textwidth, keepaspectratio=true]{fontes_energia}
 	\centering
 	\caption[Fontes de geração de energia elétrica (GWh)]{Fontes de geração de energia elétrica (GWh)}
-	\fonte{\cite[p. 15]{cgee}.}
+	\fonte{\cite[p. 35]{epe-balanco}.}
 	\label{fig:fonte_energia}
 \end{figure}
 \FloatBarrier
@@ -55,7 +55,7 @@ possibilitando um planejamento mais eficiente da rede. Aliado aos sensores na re
 	\includegraphics[width=0.7\textwidth, keepaspectratio=true]{rede_smartgrid}
 	\centering
 	\caption[Smart Grid,comunicação inteligente entre todos os usuários]{Smart Grid,comunicação inteligente entre todos os usuários}
-	\fonte{\cite[p. 15]{cgee}.}
+	\fonte{\cite{smart-grid}.}
 	\label{fig:rede_smartgrid}
 \end{figure}
 \FloatBarrier
