--- a/bibliografia/referencias.bib
+++ b/bibliografia/referencias.bib
@@ -57,6 +57,15 @@
     organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
 }
 
+@techreport{epe-anuario-2015,
+    title={Anu{\'a}rio Estat{\'i}stico de Energia El{\'e}trica 2015 ano base 2014},
+    year={2015},
+    address={Brasília},
+    pages={232},
+    org-short={EPE-Anu{\'a}rio},
+    organization={EMPRESA DE PESQUISA ENERG{\'E}TICA}
+}
+
 @techreport{epe-balanco-final,
     title={Balanço Energ{\'e}tico no Brasil Relatório Final},
     year={2017},
@@ -72,4 +81,12 @@
   url = {http://www.cemig.com.br/pt-br/A_Cemig_e_o_Futuro/sustentabilidade/nossos_programas/Redes_Inteligentes/Paginas/as_redes_inteligentes.aspx},
   urldate = {2017-06-01},
   org-short={Smart Grid}
+}
+
+@misc{evolucao-tarifa-ref,
+  author = {CNI},
+  title = {Evoluç{\^a}o dos custos com energia},
+  url = {http://www.portaldaindustria.com.br/agenciacni/noticias/2015/06/precos-de-insumos-importados-e-da-energia-puxam-a-alta-de-08-nos-custos-da-industria/},
+  urldate = {2015},
+  org-short={Evolução Tarifa}
 }
