cap 2 - finzalição da seção sobre medição de energia

--- a/textuais/capitulo2.tex
+++ b/textuais/capitulo2.tex
@@ -93,7 +93,7 @@ que alimenta e reforça o poderio hídrico do país. A energia que a usina hidro
 do aproveitamento da força potencial e cinética das correntes de água,rio, mar. A água ao passar por tubulações com muita força e velociadade 
 movimentas as turbinas fazendo com que elas girem em um velociadade suficiente para que os geradores acoplados nas turbinas, transformem energia
 mecânica em energia elétrica, lembrando que a eficiência energética de uma usina hidroelétrica é de 65,2\%. Após esse longo processo a energia 
-extraída é enviada para estações de tratamento onde e após isso é enviada para a matriz energetica que fará a distribuião da energia extraída. 
+extraída é enviada para estações de tratamento e após essa etapa é enviada para a matriz energetica que fará a distribuião da energia extraída. 
 
 \begin{table}[!ht]
 	\centering
@@ -113,8 +113,15 @@ extraída é enviada para estações de tratamento onde e após isso é enviada 
 	\label{cap_hidro}
 \end{table}
 
-Como já mencionado nesse trabalho o Brasil possui um vasto território, possibilitando inúmeras formas para obtenção de energia. 
-
+É do conhecimento de qualquer brasileiro que possua uma noção básica de geografia que a região norte é a região que possui a maior quantidade de rios,
+essa noção pode levar uma conclusão errada - A região norte é a que mais produz energia - pois nem todo rio tem potencial para que uma hidroelétrica se instale.
+Por sua vez as regiões sul e suldeste são as que mais necessitam de energia, devido a densidade populacional e a quantidade de insdutrias instaladas nas regiões.
+A \autoref{pxcxge} externa essa problemática de uma manéira bem visível. Perceb-se que por exemplo a região sudeste é a que produz mais energia, porém é a que mais
+gasta, sendo os gastos maiores do que os ganhos, já a região norte e nordeste são regiões que produzem mais do que gastam. Vendo esse total desequilíbrio
+de geração e consumo de energia, surgiu a necessidade da criação do Sistema Interligado Nacional (SIN). O SIN é constituido por todas as regiões brasileiras
+e é interconectado por meio de uma malha de trasmissão que propicia a transferência de energia entres os subsistemas, permitindo a obtenção de ganhos
+sinérgicos e explora a diversidade entre os regimes hidrológicos e das bacias. A integração dos recursos de geração e transmissão permite o atendimento ao
+mercado com segurança e economicidade.
 \begin{table}[!ht]
 	\centering
 	\begin{tabular}{cccc}
@@ -129,7 +136,38 @@ Como já mencionado nesse trabalho o Brasil possui um vasto território, possibi
 		\rowcolor[HTML]{DDDDDD} 
 		Centro-Oeste    & 15.660.988         & 5.634                  & 18,558                                                                                         
 	\end{tabular}
-	\caption{Relação Populaão x Consumo por Região x Geração Elétrica por Região}
+	\caption{Relação População x Consumo por Região x Geração Elétrica por Região}
 	\fonte{(IBGE e EPE)}
 	\label{pxcxge}
 \end{table}
+
+
+\subsection[\textit{Medição de Energia}]{\textit{Medição de Energia}}\label{med-energia}
+
+Após enterder todo o funcionamento da geração e distribuição de energia no Brasil, é conveniente entender o processo de leitura do consumo de 
+energia elétrica, assim como as questões que esse trabalho faz a respeito da eficácia. Tendo a possibilidade de atualizar esse sistema com novas 
+tecnologias que proporcinam maior segurança e menores custos ao consumidor.
+
+Os primeiros medidores de eletricidade foram utilizados na operação de lâmpadas em série, um vez que a tensão era constante, a corrente exigida
+por cada lâmpada era conhecida e todas estavam ligadas no mesmo interruptor, os medidores foram suficientes apenas para medir o gasto das lâmpadas
+em um tempo determinado, surgindo o termo - lâmpada-hora. Em 1872 o pesquisador Samuel Gardiner trouxe a toda a primeira patente sobre um contator 
+de energia, que era formado por uma lâmpada acoplada a um contador de energia DC controlado por um relógio e um eletroímã, ao passar do tempo várias
+outras patentes foram surgindo e tentando melhor o projeto de Samuel Gardiner, mas foi apenas em 1892 que que surgiu o primeiro medidor de watt-hora
+com precisão e confiabilidade suficiente para aplicação em medição de consumo de energia. Criado por Thomas Duncan, inicialmente seu objetivo era a medição
+de circuitos monofásicos, porém com o bom desempenho do aprelho modificações foram feitas para à medição de circuitos polifásicos de energia.
+
+Atualmente a energia elétrica é quantificada através de um equipamento chamado medidor, que nos dias atuais a medição é feita em quilowatt-hora.
+Os medidores da atualidade são caracterizados por padrões da norma NBR 14519, o grupo de medidor mais utilizado pelas concessionárias nas residências
+é o grupo B. 
+
+\begin{itemize}
+	\item Grupo B \\
+	É caracterizado por unidades consumidoras de baixa tensão, com tensões inferiores a 2,3KV. As unidades consumidores podem ser classificadas
+	mediante a necessidade da concessionária responsável, geralmente o tipo B1 é residencial, tipo B2 são as residências rurais e estabelecimentos
+	comerciais ou insdustriais são classificados como o tipo B3.
+\end{itemize}
+
+Estima-se que 92\% dos medidores em funcionamento são eletromecânicos, pois são de baixa custo e de boa qualidade, com o erro máximo de 2\% de seu valor
+nominal de operação. Não ter um medidor em uma unidade consumidora pode gerar transtornos tanto para concessionário, pois não saberá o quanto deve cobrar ao 
+consumidor, como para o dono do estabelecimento, pois não terá o aporte devido prestado pela concessionária de energia.
+
