--- a/textuais/introducao.tex
+++ b/textuais/introducao.tex
@@ -10,7 +10,7 @@ Como a \autoref{fig:rede_convencional} mostra, a maior parte da energia elétric
 energetica junto com a crise hídrica que o país sofreu cuminou em uma política de racionamento e aumento dos impostos - taxa inflacionária no
 consumo de energia elétrica - que impactou diretamente a vida de cada cidadão brasileiro, trouxe consequências, como o aumento do 
 custo da energia elétrica. Segundos dados (G1, 2016) entre 2015 e 2016 a crise hídrica no Brasil não interferiu apenas na conta de luz mas trouxe
-um aumento na inflação do país.asdasdasd
+um aumento na inflação do país.
 
 % sustentabilidade
 
