--- a/main.tex
+++ b/main.tex
@@ -163,6 +163,8 @@ Orientador: John Doe}
 \item[EPE]    \textit{Empresa de Pesquisa Energética}
 \item[ANEEL]  \textit{Agência Nacional de Energia Elétrica}
 \item[CEMIG]  \textit{Comapanhia Energética de Minas Gerais}
+\item[SIN]    \textit{Sistema Interligado Nacional}
+\item[IBGE]    \textit{Instituto Brasileiro de Geografia e Estatística}
 \end{siglas}
 
 % inserir lista de símbolos
